prusti-tests/tests/verify_overflow/ui/core_proof/counterexamples/integer.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/integer.rs:7:11
  |
7 | #[ensures(a == Int::new(5))]
  |           ^^^^^^^^^^^^^^^^
  |
note: the error originates here
 --> $DIR/integer.rs:8:1
  |
8 | fn test1(a: Int) {}
  | ^^^^^^^^^^^^^^^^^^^
note: counterexample for "a"
       value:   2
 --> $DIR/integer.rs:8:10
  |
8 | fn test1(a: Int) {}
  |          ^
note: counterexample for "result"
       value:   ()
 --> $DIR/integer.rs:8:18
  |
8 | fn test1(a: Int) {}
  |                  ^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/integer.rs:11:11
   |
11 | #[ensures(!result)]
   |           ^^^^^^^
   |
note: the error originates here
  --> $DIR/integer.rs:12:1
   |
12 | / fn test2(a: Int, b: Int) -> bool{
13 | |     let c = a + b;
14 | |     c == Int::new(30)
15 | | }
   | |_^
note: counterexample for "a"
       value:   10
  --> $DIR/integer.rs:12:10
   |
12 | fn test2(a: Int, b: Int) -> bool{
   |          ^
note: counterexample for "b"
       value:   20
  --> $DIR/integer.rs:12:18
   |
12 | fn test2(a: Int, b: Int) -> bool{
   |                  ^
note: counterexample for "c"
       value:   30
  --> $DIR/integer.rs:13:13
   |
13 |     let c = a + b;
   |             ^^^^^
note: counterexample for "c"
       value:   30
  --> $DIR/integer.rs:14:5
   |
14 |     c == Int::new(30)
   |     ^
note: counterexample for "result"
       value:   true
  --> $DIR/integer.rs:14:5
   |
14 |     c == Int::new(30)
   |     ^^^^^^^^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/integer.rs:20:37
   |
20 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |                                     ^^^^
   |
note: the error originates here
  --> $DIR/integer.rs:20:1
   |
20 | / fn test3(a: Int, b: Int, c: Int) -> bool {
21 | |     a + c >= b + c
22 | | }
   | |_^
note: counterexample for "a"
       value:   10
  --> $DIR/integer.rs:20:10
   |
20 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |          ^
note: counterexample for "b"
       value:   0
  --> $DIR/integer.rs:20:18
   |
20 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |                  ^
note: counterexample for "c"
       value:   11
  --> $DIR/integer.rs:20:26
   |
20 | fn test3(a: Int, b: Int, c: Int) -> bool {
   |                          ^
note: counterexample for "result"
       value:   false
  --> $DIR/integer.rs:21:5
   |
21 |     a + c >= b + c
   |     ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

